Set HTML character set, fix header/content displacement, fix cloaking, fix login buttons alignment

--- a/styles/style.styl
+++ b/styles/style.styl
@@ -3,6 +3,9 @@ header_height = 48px
 header_button_size = 32px
 nav_padding = 8px
 
+[ng\:cloak], [ng-cloak], .ng-cloak
+  display: none !important
+
 body
   background-color: #eee
   padding-top: 60px
@@ -105,7 +108,7 @@ body
 
   .login
     margin-top: 6px
-    padding: 0
+    padding: 5px 0
 
   .google
     color: #cc3d2d
